--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "neolemuria-frontend",
-  "description": "A fronted for NeoLemuria.com",
+  "name": "docker|mon",
+  "description": "Docker Monitoring",
   "version": "1.0.0",
-  "homepage": "http://neolemuria.com",
+  "homepage": "http://docker.com",
   "private": true,
   "dependencies": {
     "angular": "1.3.x",
