--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "docker|mon",
-  "description": "Docker Monitoring",
-  "version": "1.0.0",
-  "homepage": "http://docker.com",
-  "private": true,
+  "description": "Docker monitoring and host administration tool",
+  "version": "0.1.0",
+  "homepage": "https://github.com/lexandro/dockermon",
+  "private": false,
   "dependencies": {
     "angular": "1.3.x",
     "jquery": "~2.1.1",
