--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "~3.3.4",
     "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
-    "json-formatter": "~0.2.7"
+    "json-formatter": "~0.2.7",
+    "term.js": "~0.0.3"
   }
 }
