--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
     "json-formatter": "~0.2.7",
-    "term.js": "~0.0.3"
+    "term.js": "~0.0.3",
+    "xterm.js": "~0.9.3"
   }
 }
