--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "~3.3.4",
     "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
+    "angular-messages": "1.3.x",
     "json-formatter": "~0.2.7",
     "xterm.js": "~0.9.3",
     "font-awesome": "~4.3.0"
