--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Dockery light",
   "short_name": "Dockery light",
-  "description": "Docker managing frontend applicaton",
+  "description": "Frontend application for Docker management",
   "version": "0.2.7",
   "manifest_version": 2,
   "app": {
